Created the emotional-assistance section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
             <img
                 class="ornament"
                 src="./assets/ornament-cuted.png"
-                alt="an ornament"
+                alt="un ornamento"
             />
-            <img class="logo" src="./assets/logo.png" alt="" />
+            <img
+                class="logo"
+                src="./assets/logo.png"
+                alt="Logo La Hispano Mexicana"
+            />
             <nav class="nav-bar">
                 <ul class="list">
                     <li class="item"><a href="">INICIO</a></li>
@@ -61,7 +65,10 @@
                 </ul>
                 <div class="gallery-container">
                     <button class="button left">
-                        <img src="./assets/left-arrow.svg" alt="" />
+                        <img
+                            src="./assets/left-arrow.svg"
+                            alt="Mover a la izquierda"
+                        />
                     </button>
                     <article class="gallery">
                         <img
@@ -101,10 +108,65 @@
                         />
                     </article>
                     <button class="button right">
-                        <img src="./assets/right-arrow.svg" alt="" />
+                        <img
+                            src="./assets/right-arrow.svg"
+                            alt="Mover a la derecha"
+                        />
                     </button>
                 </div>
             </section>
+            <section class="emotional-assistance">
+                <figure class="banner"></figure>
+                <img
+                    class="flyer"
+                    src="./assets/Tanatología.svg"
+                    alt="Tanatología"
+                />
+                <h2 class="title">Asistencia Emocional</h2>
+                <ul class="list">
+                    <li class="item">Asesoría telefónica las 24 hrs.</li>
+                    <li class="item">Talleres</li>
+                    <li class="item">Asesoramiento</li>
+                    <li class="item">Acompañamiento</li>
+                </ul>
+            </section>
+            <div class="separation"></div>
+            <section class="contact">
+                <h2 class="title">Contáctanos</h2>
+                <p class="paragraph">
+                    Envíanos tus datos y nos pondremos en contacto contigo.
+                </p>
+                <form class="form" action="">
+                    <label class="label" for="name">Nombre y apellido*</label>
+                    <input class="input" type="text" name="name" id="name" />
+                    <label class="label" for="mail">Correo Electrónico*</label>
+                    <input class="input" type="email" name="mail" id="mail" />
+                    <label class="label" for="phone">Número de Teléfono*</label>
+                    <input class="input" type="tel" name="phone" id="phone" />
+                    <button class="button">ENVIAR</button>
+                </form>
+                <article class="card">
+                    <p class="paragraph">
+                        Av. Morelos No. 227 <br />
+                        Esq. Álvaro Obregón Sur <br />
+                        C.P, 62000 Cuernavaca, Mor.
+                    </p>
+                    <p class="paragraph">
+                        <b>Tel. (777) 314-25-00</b>
+                    </p>
+                </article>
+                <article class="card">
+                    <p class="paragraph">
+                        Av. Río Mayo No. 141 <br />
+                        Esq. Río Nazas Col. Vista Hermosa <br />
+                        C.P, 62290 Cuernavaca, Mor.
+                    </p>
+                    <p class="paragraph">
+                        <b>Tel. (777) 316-59-87</b>
+                    </p>
+                </article>
+            </section>
+            <div class="separation"></div>
         </body>
         <footer></footer>
 
