--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>La Hispano Mexicana</title>
         <link rel="stylesheet" href="./styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -15,14 +18,16 @@
             />
             <img
                 class="logo"
-                src="./assets/logo.png"
+                src="./assets/logo.svg"
                 alt="Logo La Hispano Mexicana"
             />
             <nav class="nav-bar">
                 <ul class="list">
                     <li class="item"><a href="/">INICIO</a></li>
                     <li class="item"><a href="#servicios">SERVICIOS</a></li>
-                    <li class="item"><a href="#asistencia-emocional">ASISTENCIA EMOCIONAL</a></li>
+                    <li class="item">
+                        <a href="#asistencia-emocional">ASISTENCIA EMOCIONAL</a>
+                    </li>
                     <li class="item"><a href="#contacto">CONTACTO</a></li>
                 </ul>
             </nav>
