Refactorized the JS code and started adding some media queries

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <img
                 class="ornament"
-                src="./assets/ornament-cuted.png"
+                src="./assets/ornament.png"
                 alt="un ornamento"
             />
             <img
@@ -23,7 +23,7 @@
             />
             <nav class="nav-bar">
                 <ul class="list">
-                    <li class="item"><a href="/">INICIO</a></li>
+                    <li class="item"><a href="./">INICIO</a></li>
                     <li class="item"><a href="#servicios">SERVICIOS</a></li>
                     <li class="item">
                         <a href="#asistencia-emocional">ASISTENCIA EMOCIONAL</a>
@@ -39,18 +39,26 @@
         </header>
         <body>
             <div class="separation"></div>
-            <article class="banner"></article>
             <section class="history">
+                <article class="banner"></article>
                 <h2 class="title">HISTORIA</h2>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Recusandae eligendi, nemo, voluptates voluptate vero magni
-                    voluptas libero ad esse possimus est eum quo vel suscipit,
-                    reprehenderit blanditiis laborum tempora ullam. Nisi dolorem
-                    voluptatem accusantium itaque provident eveniet error
-                    magnam, fuga rem similique voluptatum repudiandae veniam
-                    delectus iusto id adipisci assumenda recusandae illum saepe
-                    in? Totam quae accusamus labore numquam asperiores?
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing
+                    elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna aliquam erat volutpat.
+                    Ut wisi enim ad minim veniam, quis nostrud
+                    exerci tation ullamcorper suscipit lobortis nisl ut
+                    aliquip ex ea commodo consequat. Duis autem
+                    vel eum iriure dolor in hendrerit in vulputate velit
+                    esse molestie consequat, vel illum dolore eu feugiat
+                    nulla facilisis at vero eros et accumsan et
+                    iusto odio dignissim qui blandit praesent luptatum
+                    zzril delenit augue duis dolore te feugait nulla facilisi.
+                    Lorem ipsum dolor sit amet, cons ectetuer adipiscing
+                    elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna aliquam erat volutpat.
+                    Ut wisi enim ad minim veniam, quis nostrud
+                    exerci tation ullamcorper suscipit lobortis nisl ut
                 </p>
             </section>
             <div class="separation"></div>
