Added the media querys for 1440px display large

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 src="./assets/ornament.png"
                 alt="un ornamento"
             />
-            <img
+            <div class="logo-navabar-container">
+                <img
                 class="logo"
                 src="./assets/logo.svg"
                 alt="Logo La Hispano Mexicana"
@@ -31,6 +32,7 @@
                     <li class="item"><a href="#contacto">CONTACTO</a></li>
                 </ul>
             </nav>
+            </div>
             <article class="call-buttons">
                 <p class="paragraph">ASISTENCIA LAS 24HRS</p>
                 <a class="anchor" href="">Llamar</a>
@@ -41,45 +43,49 @@
             <div class="separation"></div>
             <section class="history">
                 <article class="banner"></article>
-                <h2 class="title">HISTORIA</h2>
-                <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing
-                    elit, sed diam nonummy nibh euismod tincidunt
-                    ut laoreet dolore magna aliquam erat volutpat.
-                    Ut wisi enim ad minim veniam, quis nostrud
-                    exerci tation ullamcorper suscipit lobortis nisl ut
-                    aliquip ex ea commodo consequat. Duis autem
-                    vel eum iriure dolor in hendrerit in vulputate velit
-                    esse molestie consequat, vel illum dolore eu feugiat
-                    nulla facilisis at vero eros et accumsan et
-                    iusto odio dignissim qui blandit praesent luptatum
-                    zzril delenit augue duis dolore te feugait nulla facilisi.
-                    Lorem ipsum dolor sit amet, cons ectetuer adipiscing
-                    elit, sed diam nonummy nibh euismod tincidunt
-                    ut laoreet dolore magna aliquam erat volutpat.
-                    Ut wisi enim ad minim veniam, quis nostrud
-                    exerci tation ullamcorper suscipit lobortis nisl ut
-                </p>
+                <div class="text-container">
+                    <h2 class="title">HISTORIA</h2>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing
+                        elit, sed diam nonummy nibh euismod tincidunt
+                        ut laoreet dolore magna aliquam erat volutpat.
+                        Ut wisi enim ad minim veniam, quis nostrud
+                        exerci tation ullamcorper suscipit lobortis nisl ut
+                        aliquip ex ea commodo consequat. Duis autem
+                        vel eum iriure dolor in hendrerit in vulputate velit
+                        esse molestie consequat, vel illum dolore eu feugiat
+                        nulla facilisis at vero eros et accumsan et
+                        iusto odio dignissim qui blandit praesent luptatum
+                        zzril delenit augue duis dolore te feugait nulla facilisi.
+                        Lorem ipsum dolor sit amet, cons ectetuer adipiscing
+                        elit, sed diam nonummy nibh euismod tincidunt
+                        ut laoreet dolore magna aliquam erat volutpat.
+                        Ut wisi enim ad minim veniam, quis nostrud
+                        exerci tation ullamcorper suscipit lobortis nisl ut
+                    </p>
+                </div>
             </section>
             <div class="separation"></div>
             <section id="servicios" class="services">
                 <h2 class="title">Servicios</h2>
-                <ul class="list">
-                    <li class="item">Asesoría telefónica las 24 hrs.</li>
-                    <li class="item">Previsión.</li>
-                    <li class="item">Gestoría del funeral.</li>
-                    <li class="item">Asesoría legal (en caso de accidente).</li>
-                    <li class="item">
-                        Arreglo estético del cuerpo (aseo y vestido).
-                    </li>
-                    <li class="item">Urna para cremación.</li>
-                    <li class="item">Proceso de cremación.</li>
-                    <li class="item">
-                        Velación a domicilio o funeraria filial.
-                    </li>
-                    <li class="item">Carroza al cementerio o al horno.</li>
-                    <li class="item">Crematorio.</li>
-                </ul>
+                <div class="lists-container">
+                    <ul class="list">
+                        <li class="item">Asesoría telefónica las 24 hrs.</li>
+                        <li class="item">Previsión.</li>
+                        <li class="item">Gestoría del funeral.</li>
+                        <li class="item">Asesoría legal (en caso de accidente).</li>
+                    </ul>
+                    <ul class="list">
+                        <li class="item">Arreglo estético del cuerpo (aseo y vestido).</li>
+                        <li class="item">Urna para cremación.</li>
+                        <li class="item">Proceso de cremación.</li>
+                    </ul>
+                    <ul class="list">
+                        <li class="item">Velación a domicilio o funeraria filial.</li>
+                        <li class="item">Carroza al cementerio o al horno.</li>
+                        <li class="item">Crematorio.</li>
+                    </ul>
+                </div>
                 <div class="gallery-container">
                     <button class="button left">
                         <img
@@ -134,20 +140,28 @@
             </section>
             <section id="asistencia-emocional" class="emotional-assistance">
                 <figure class="banner"></figure>
-                <img
+                <div class="flyer-and-text">
+                    <img
                     class="flyer"
                     src="./assets/thanatology.svg"
                     alt="Tanatología"
                 />
-                <h2 class="title">Asistencia Emocional</h2>
-                <ul class="list">
-                    <li class="item">Asesoría telefónica las 24 hrs.</li>
-                    <li class="item">Talleres</li>
-                    <li class="item">Asesoramiento</li>
-                    <li class="item">Acompañamiento</li>
-                </ul>
+                <div class="text">
+                    <h2 class="title">Asistencia Emocional</h2>
+                    <ul class="list">
+                        <li class="item">Asesoría telefónica las 24 hrs.</li>
+                        <li class="item">Talleres</li>
+                        <li class="item">Asesoramiento</li>
+                        <li class="item">Acompañamiento</li>
+                    </ul>
+                    </div>
+                </div>
+                <article class="photos">
+                    <figure class="photo photo-1"></figure>
+                    <figure class="photo photo-2"></figure>
+                    <figure class="photo photo-3"></figure>
+                </article>
             </section>
-            <div class="separation"></div>
             <section id="contacto" class="contact">
                 <h2 class="title">Contáctanos</h2>
                 <p class="paragraph">
@@ -212,7 +226,6 @@
                     </p>
                 </article>
             </section>
-            <div class="separation"></div>
         </body>
         <footer>
             <img src="./assets/logo-white.svg" alt="Logo" class="logo" />
