--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>La Hispano Mexicana</title>
         <link rel="stylesheet" href="./styles.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header>
@@ -18,20 +21,22 @@
             />
             <div class="logo-navabar-container">
                 <img
-                class="logo"
-                src="./assets/logo.svg"
-                alt="Logo La Hispano Mexicana"
-            />
-            <nav class="nav-bar">
-                <ul class="list">
-                    <li class="item"><a href="./">INICIO</a></li>
-                    <li class="item"><a href="#servicios">SERVICIOS</a></li>
-                    <li class="item">
-                        <a href="#asistencia-emocional">ASISTENCIA EMOCIONAL</a>
-                    </li>
-                    <li class="item"><a href="#contacto">CONTACTO</a></li>
-                </ul>
-            </nav>
+                    class="logo"
+                    src="./assets/logo.svg"
+                    alt="Logo La Hispano Mexicana"
+                />
+                <nav class="nav-bar">
+                    <ul class="list">
+                        <li class="item"><a href="./">INICIO</a></li>
+                        <li class="item"><a href="#servicios">SERVICIOS</a></li>
+                        <li class="item">
+                            <a href="#asistencia-emocional"
+                                >ASISTENCIA EMOCIONAL</a
+                            >
+                        </li>
+                        <li class="item"><a href="#contacto">CONTACTO</a></li>
+                    </ul>
+                </nav>
             </div>
             <article class="call-buttons">
                 <p class="paragraph">ASISTENCIA LAS 24HRS</p>
@@ -39,7 +44,7 @@
                 <a class="anchor" href="">WhatsApp</a>
             </article>
         </header>
-        <body>
+        <main>
             <div class="separation"></div>
             <section class="history">
                 <article class="banner"></article>
@@ -47,25 +52,24 @@
                     <h2 class="title">HISTORIA</h2>
                     <p class="paragraph">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing
-                        elit, sed diam nonummy nibh euismod tincidunt
-                        ut laoreet dolore magna aliquam erat volutpat.
-                        Ut wisi enim ad minim veniam, quis nostrud
-                        exerci tation ullamcorper suscipit lobortis nisl ut
-                        aliquip ex ea commodo consequat. Duis autem
-                        vel eum iriure dolor in hendrerit in vulputate velit
-                        esse molestie consequat, vel illum dolore eu feugiat
-                        nulla facilisis at vero eros et accumsan et
-                        iusto odio dignissim qui blandit praesent luptatum
-                        zzril delenit augue duis dolore te feugait nulla facilisi.
-                        Lorem ipsum dolor sit amet, cons ectetuer adipiscing
-                        elit, sed diam nonummy nibh euismod tincidunt
-                        ut laoreet dolore magna aliquam erat volutpat.
-                        Ut wisi enim ad minim veniam, quis nostrud
-                        exerci tation ullamcorper suscipit lobortis nisl ut
+                        elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                        dolore magna aliquam erat volutpat. Ut wisi enim ad
+                        minim veniam, quis nostrud exerci tation ullamcorper
+                        suscipit lobortis nisl ut aliquip ex ea commodo
+                        consequat. Duis autem vel eum iriure dolor in hendrerit
+                        in vulputate velit esse molestie consequat, vel illum
+                        dolore eu feugiat nulla facilisis at vero eros et
+                        accumsan et iusto odio dignissim qui blandit praesent
+                        luptatum zzril delenit augue duis dolore te feugait
+                        nulla facilisi. Lorem ipsum dolor sit amet, cons
+                        ectetuer adipiscing elit, sed diam nonummy nibh euismod
+                        tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        Ut wisi enim ad minim veniam, quis nostrud exerci tation
+                        ullamcorper suscipit lobortis nisl ut
                     </p>
                 </div>
             </section>
-            <div class="separation"></div>
+            <!-- <div class="separation"></div> -->
             <section id="servicios" class="services">
                 <h2 class="title">Servicios</h2>
                 <div class="lists-container">
@@ -73,15 +77,21 @@
                         <li class="item">Asesoría telefónica las 24 hrs.</li>
                         <li class="item">Previsión.</li>
                         <li class="item">Gestoría del funeral.</li>
-                        <li class="item">Asesoría legal (en caso de accidente).</li>
+                        <li class="item">
+                            Asesoría legal (en caso de accidente).
+                        </li>
                     </ul>
                     <ul class="list">
-                        <li class="item">Arreglo estético del cuerpo (aseo y vestido).</li>
+                        <li class="item">
+                            Arreglo estético del cuerpo (aseo y vestido).
+                        </li>
                         <li class="item">Urna para cremación.</li>
                         <li class="item">Proceso de cremación.</li>
                     </ul>
                     <ul class="list">
-                        <li class="item">Velación a domicilio o funeraria filial.</li>
+                        <li class="item">
+                            Velación a domicilio o funeraria filial.
+                        </li>
                         <li class="item">Carroza al cementerio o al horno.</li>
                         <li class="item">Crematorio.</li>
                     </ul>
@@ -142,18 +152,20 @@
                 <figure class="banner"></figure>
                 <div class="flyer-and-text">
                     <img
-                    class="flyer"
-                    src="./assets/thanatology.svg"
-                    alt="Tanatología"
-                />
-                <div class="text">
-                    <h2 class="title">Asistencia Emocional</h2>
-                    <ul class="list">
-                        <li class="item">Asesoría telefónica las 24 hrs.</li>
-                        <li class="item">Talleres</li>
-                        <li class="item">Asesoramiento</li>
-                        <li class="item">Acompañamiento</li>
-                    </ul>
+                        class="flyer"
+                        src="./assets/thanatology.svg"
+                        alt="Tanatología"
+                    />
+                    <div class="text">
+                        <h2 class="title">Asistencia Emocional</h2>
+                        <ul class="list">
+                            <li class="item">
+                                Asesoría telefónica las 24 hrs.
+                            </li>
+                            <li class="item">Talleres</li>
+                            <li class="item">Asesoramiento</li>
+                            <li class="item">Acompañamiento</li>
+                        </ul>
                     </div>
                 </div>
                 <article class="photos">
@@ -226,7 +238,7 @@
                     </p>
                 </article>
             </section>
-        </body>
+        </main>
         <footer>
             <img src="./assets/logo-white.svg" alt="Logo" class="logo" />
             <article class="privacy">
