Deleted gallery and histoy and added some anchor links

--- a/index.html
+++ b/index.html
@@ -40,36 +40,16 @@
             </div>
             <article class="call-buttons">
                 <p class="paragraph">ASISTENCIA LAS 24HRS</p>
-                <a class="anchor" href="">Llamar</a>
+                <a class="anchor" href="tel:527773142500">Llamar</a>
                 <a class="anchor" href="">WhatsApp</a>
             </article>
         </header>
         <main>
             <div class="separation"></div>
             <section class="history">
-                <article class="banner"></article>
-                <div class="text-container">
-                    <h2 class="title">HISTORIA</h2>
-                    <p class="paragraph">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing
-                        elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-                        dolore magna aliquam erat volutpat. Ut wisi enim ad
-                        minim veniam, quis nostrud exerci tation ullamcorper
-                        suscipit lobortis nisl ut aliquip ex ea commodo
-                        consequat. Duis autem vel eum iriure dolor in hendrerit
-                        in vulputate velit esse molestie consequat, vel illum
-                        dolore eu feugiat nulla facilisis at vero eros et
-                        accumsan et iusto odio dignissim qui blandit praesent
-                        luptatum zzril delenit augue duis dolore te feugait
-                        nulla facilisi. Lorem ipsum dolor sit amet, cons
-                        ectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                        ullamcorper suscipit lobortis nisl ut
-                    </p>
-                </div>
+                <figure class="banner"></figure>
             </section>
-            <!-- <div class="separation"></div> -->
+            <div class="separation"></div>
             <section id="servicios" class="services">
                 <h2 class="title">Servicios</h2>
                 <div class="lists-container">
@@ -95,57 +75,6 @@
                         <li class="item">Carroza al cementerio o al horno.</li>
                         <li class="item">Crematorio.</li>
                     </ul>
-                </div>
-                <div class="gallery-container">
-                    <button class="button left">
-                        <img
-                            src="./assets/left-arrow.svg"
-                            alt="Mover a la izquierda"
-                        />
-                    </button>
-                    <article class="gallery">
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                        <img
-                            class="image"
-                            src="./assets/rectangulo-prueba.png"
-                            alt=""
-                        />
-                    </article>
-                    <button class="button right">
-                        <img
-                            src="./assets/right-arrow.svg"
-                            alt="Mover a la derecha"
-                        />
-                    </button>
                 </div>
             </section>
             <section id="asistencia-emocional" class="emotional-assistance">
@@ -174,6 +103,7 @@
                     <figure class="photo photo-3"></figure>
                 </article>
             </section>
+            <div class="separation"></div>
             <section id="contacto" class="contact">
                 <h2 class="title">Contáctanos</h2>
                 <p class="paragraph">
@@ -248,16 +178,20 @@
             </article>
             <article class="social-media">
                 <p class="paragraph">Redes Sociales</p>
-                <img
+                <a href="https://www.facebook.com/GrupoHispanoMexicana">
+                    <img
                     src="./assets/fb-icon.svg"
                     alt="Facebook icon"
                     class="icon facebook"
                 />
-                <img
+                </a>
+                <a href="https://wa.me/527777177708">
+                    <img
                     src="./assets/wp-icon.svg"
                     alt="WhatsApp icon"
                     class="icon whatsapp"
                 />
+                </a>
             </article>
             <p class="rights">
                 2024. Grupo Hispano Mexicana. Todos los derechos reservados.
